[gd_scene load_steps=21 format=2]

[ext_resource path="res://res/animates/actor_2/Sprites/actor_thumb.png" type="Texture" id=1]
[ext_resource path="res://res/GUI_set_0/imgs/shortInfo/img31.png" type="Texture" id=2]
[ext_resource path="res://res/GUI_set_0/imgs/shortInfo/img45.png" type="Texture" id=3]
[ext_resource path="res://scenes/scripts/HUD_level.gd" type="Script" id=4]
[ext_resource path="res://fonts/norwester.otf" type="DynamicFontData" id=5]
[ext_resource path="res://res/GUI_set_0/imgs/sample_2.png" type="Texture" id=6]
[ext_resource path="res://res/GUI_set_0/imgs/board&bar/bar_fill_red.png" type="Texture" id=7]
[ext_resource path="res://res/GUI_set_0/imgs/board&bar/capiticity_bar.png" type="Texture" id=8]
[ext_resource path="res://res/GUI_set_0/imgs/board&bar/bar_fill_blue.png" type="Texture" id=9]
[ext_resource path="res://scenes/GUI/HUD_characterInfo.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/GUI/HUD_shopList.tscn" type="PackedScene" id=11]
[ext_resource path="res://scenes/GUI/HUD_pauseMenu.tscn" type="PackedScene" id=12]
[ext_resource path="res://addons/joystick_control/assets/joystick.gd" type="Script" id=13]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 60
outline_size = 1
outline_color = Color( 0.0745098, 0.0196078, 0.0196078, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 49, 3 )

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 52, 7 )
expand_margin_left = 3.0
expand_margin_right = 3.0
expand_margin_top = 3.0
expand_margin_bottom = 3.0

[sub_resource type="StyleBoxTexture" id=7]
texture = ExtResource( 9 )
region_rect = Rect2( 0, 0, 42, 3 )

[node name="HUD_level" type="CanvasLayer"]
script = ExtResource( 4 )

[node name="panel_result" type="Node2D" parent="."]
visible = false

[node name="rect_result" type="ColorRect" parent="panel_result"]
margin_left = 358.946
margin_top = 149.527
margin_right = 685.946
margin_bottom = 471.527
color = Color( 0.96875, 0.787141, 0.503832, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lbl_title" type="Label" parent="panel_result/rect_result"]
anchor_right = 1.0
margin_bottom = 33.0
custom_fonts/font = SubResource( 1 )
text = "Stage Clear"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lbl_score" type="Label" parent="panel_result/rect_result"]
anchor_right = 1.0
margin_left = 12.0
margin_top = 37.0
margin_right = -14.0
margin_bottom = 75.0
custom_fonts/font = SubResource( 1 )
text = "Score :"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="value" type="Label" parent="panel_result/rect_result/lbl_score"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -104.0
margin_top = -19.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 1 )
text = "99999"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lbl_jumps" type="Label" parent="panel_result/rect_result"]
anchor_right = 1.0
margin_left = 12.0
margin_top = 75.2001
margin_right = -14.0
margin_bottom = 113.2
custom_fonts/font = SubResource( 1 )
text = "Jumps :"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="value" type="Label" parent="panel_result/rect_result/lbl_jumps"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -104.0
margin_top = -19.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 1 )
text = "99999"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lbl_falls" type="Label" parent="panel_result/rect_result"]
anchor_right = 1.0
margin_left = 12.0
margin_top = 113.872
margin_right = -14.0
margin_bottom = 151.872
custom_fonts/font = SubResource( 1 )
text = "Falls :"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="value" type="Label" parent="panel_result/rect_result/lbl_falls"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -104.0
margin_top = -19.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 1 )
text = "99999"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_backtotitle" type="Button" parent="panel_result/rect_result"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -130.175
margin_top = -43.5387
margin_right = -33.1749
margin_bottom = -10.5387
action_mode = 0
text = "Back to title"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_nextlevel" type="Button" parent="panel_result/rect_result"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 36.3365
margin_top = -46.1734
margin_right = 133.337
margin_bottom = -13.1734
action_mode = 0
text = "Next level"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="panel_result_dead" type="Node2D" parent="."]
visible = false

[node name="TextureRect" type="TextureRect" parent="panel_result_dead"]
margin_left = 338.141
margin_top = 232.502
margin_right = 378.141
margin_bottom = 272.502
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lbl_head" type="Label" parent="panel_result_dead"]
margin_left = 417.795
margin_top = 242.0
margin_right = 645.795
margin_bottom = 302.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.658824, 0.0862745, 0.0862745, 1 )
text = "You Dead"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lbl_subtitle" type="Label" parent="panel_result_dead"]
margin_left = 427.528
margin_top = 313.62
margin_right = 644.528
margin_bottom = 356.62
custom_fonts/font = SubResource( 3 )
text = "reborn in 5s"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_retry" type="Button" parent="panel_result_dead"]
margin_left = 424.931
margin_top = 348.472
margin_right = 506.931
margin_bottom = 387.472
action_mode = 0
text = "Retry"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_backtotitle_dead" type="Button" parent="panel_result_dead"]
margin_left = 557.452
margin_top = 348.943
margin_right = 650.452
margin_bottom = 387.943
action_mode = 0
text = "Back To Title"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HUD_node_characterInfo" parent="." instance=ExtResource( 10 )]
visible = false

[node name="HUD_node_shopView" parent="." instance=ExtResource( 11 )]
visible = false

[node name="timer_reborn" type="Timer" parent="."]

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 957.104
margin_top = 10.984
margin_right = 1012.1
margin_bottom = 65.984
action_mode = 0
texture_normal = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CharacterInfo_short" type="TextureRect" parent="."]
margin_left = 13.6799
margin_top = 15.0479
margin_right = 108.68
margin_bottom = 104.048
texture = ExtResource( 2 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="CharacterInfo_short"]
position = Vector2( 49.5441, 47.4316 )
scale = Vector2( 2.31533, 2.31533 )
texture = ExtResource( 1 )

[node name="bar_coinBalance" type="TextureRect" parent="CharacterInfo_short"]
margin_left = 95.1281
margin_top = 48.1281
margin_right = 221.128
margin_bottom = 87.1281
texture = ExtResource( 3 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lbl_bal" type="Label" parent="CharacterInfo_short/bar_coinBalance"]
margin_left = 23.279
margin_top = 9.72099
margin_right = 112.279
margin_bottom = 28.721
custom_fonts/font = SubResource( 4 )
text = "0"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bar_hp" type="ProgressBar" parent="CharacterInfo_short"]
margin_left = 97.558
margin_top = 5.83703
margin_right = 256.558
margin_bottom = 23.837
custom_styles/fg = SubResource( 5 )
custom_styles/bg = SubResource( 6 )
value = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bar_sp" type="ProgressBar" parent="CharacterInfo_short"]
margin_left = 98.0
margin_top = 28.0
margin_right = 240.0
margin_bottom = 46.0
custom_styles/fg = SubResource( 7 )
custom_styles/bg = SubResource( 6 )
value = 30.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HUD_node_pauseMenu" parent="." instance=ExtResource( 12 )]
visible = false

[node name="Control" type="Control" parent="."]
margin_left = 135.326
margin_top = 473.043
margin_right = 175.326
margin_bottom = 513.043
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_down" from="panel_result/rect_result/btn_backtotitle" to="." method="_on_btn_backtotitle_button_down"]
[connection signal="button_down" from="panel_result/rect_result/btn_nextlevel" to="." method="_on_btn_nextlevel_button_down"]
[connection signal="button_down" from="panel_result_dead/btn_retry" to="." method="_on_btn_retry_button_down"]
[connection signal="button_down" from="panel_result_dead/btn_backtotitle_dead" to="." method="_on_btn_backtotitle_dead_button_down"]
[connection signal="item_selected" from="HUD_node_shopView" to="." method="_on_HUD_node_shopView_item_selected"]
[connection signal="shop_closed" from="HUD_node_shopView" to="." method="_on_HUD_node_shopView_shop_closed"]
[connection signal="timeout" from="timer_reborn" to="." method="_on_timer_reborn_timeout"]
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="menu_closed" from="HUD_node_pauseMenu" to="." method="_on_HUD_node_pauseMenu_menu_closed"]
